--- a/next-app-auth/package.json
+++ b/next-app-auth/package.json
@@ -10,12 +10,17 @@
   },
   "dependencies": {
     "@prisma/client": "^5.8.1",
+    "@types/bcrypt": "^5.0.2",
+    "bcrypt": "^5.1.1",
     "next": "14.1.0",
+    "next-auth": "^4.24.5",
     "prisma": "^5.8.1",
     "react": "^18",
     "react-dom": "^18"
   },
   "devDependencies": {
+    "@types/node": "20.11.5",
+    "@types/react": "18.2.48",
     "autoprefixer": "^10.0.1",
     "eslint": "^8",
     "eslint-config-next": "14.1.0",
