--- a/next-app-auth/package.json
+++ b/next-app-auth/package.json
@@ -9,14 +9,25 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@heroicons/react": "^2.1.1",
+    "@hookform/resolvers": "^3.3.4",
+    "@nextui-org/react": "^2.2.9",
     "@prisma/client": "^5.8.1",
     "@types/bcrypt": "^5.0.2",
+    "@types/validator": "^13.11.8",
     "bcrypt": "^5.1.1",
+    "check-password-strength": "^2.0.7",
+    "clsx": "^2.1.0",
+    "framer-motion": "^10.18.0",
     "next": "14.1.0",
     "next-auth": "^4.24.5",
     "prisma": "^5.8.1",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-hook-form": "^7.49.3",
+    "react-toastify": "^10.0.4",
+    "validator": "^13.11.0",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
     "@types/node": "20.11.5",
