--- a/next-app-auth/package.json
+++ b/next-app-auth/package.json
@@ -14,13 +14,18 @@
     "@nextui-org/react": "^2.2.9",
     "@prisma/client": "^5.8.1",
     "@types/bcrypt": "^5.0.2",
+    "@types/jsonwebtoken": "^9.0.5",
+    "@types/nodemailer": "^6.4.14",
     "@types/validator": "^13.11.8",
     "bcrypt": "^5.1.1",
     "check-password-strength": "^2.0.7",
     "clsx": "^2.1.0",
     "framer-motion": "^10.18.0",
+    "handlebars": "^4.7.8",
+    "jsonwebtoken": "^9.0.2",
     "next": "14.1.0",
     "next-auth": "^4.24.5",
+    "nodemailer": "^6.9.8",
     "prisma": "^5.8.1",
     "react": "^18",
     "react-dom": "^18",
